--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "experimentalDecorators": true,
     "target": "es5",
     "lib": [
       "dom",
